--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -64,9 +64,9 @@
                     <Button x:Name="ButtonDownloadRunbook" Grid.Column="0" Grid.Row="1" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadRunbook_Click" IsEnabled="False"/>
                     <Button x:Name="ButtonOpenRunbook" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Content="Open Local Copy" Click="ButtonOpenRunbook_Click" IsEnabled="False"/>
                     <Button x:Name="ButtonRefreshRunbookList" Grid.Column="2" Grid.Row="1" Margin="5,10,5,0" Content="Refresh" IsEnabled="False"/>
-                    <Button x:Name="ButtonUploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload and Test" IsEnabled="False"/>
-                    <Button x:Name="ButtonPublishRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Publish" Click="ButtonPublishRunbook_Click" IsEnabled="False"/>
-                    <Button x:Name="ButtonStartRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Start in Azure" IsEnabled="False"/>
+                    <Button x:Name="ButtonUploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload Draft" IsEnabled="False"/>
+                    <Button x:Name="ButtonTestRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Test Draft" IsEnabled="False"/>
+                    <Button x:Name="ButtonPublishRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Publish Draft" Click="ButtonPublishRunbook_Click" IsEnabled="False"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="settingsTab" Header="Assets">
