--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -63,9 +63,9 @@
                     </ListView>
                     <Button x:Name="ButtonDownloadRunbook" Grid.Column="0" Grid.Row="1" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadRunbook_Click" IsEnabled="False"/>
                     <Button x:Name="ButtonOpenRunbook" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Content="Open Local Copy" Click="ButtonOpenRunbook_Click" IsEnabled="False"/>
-                    <Button x:Name="ButtonRefreshRunbookList" Grid.Column="2" Grid.Row="1" Margin="5,10,5,0" Content="Refresh" IsEnabled="False"/>
-                    <Button x:Name="ButtonUploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload Draft" IsEnabled="False"/>
-                    <Button x:Name="ButtonTestRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Test Draft" IsEnabled="False"/>
+                    <Button x:Name="ButtonRefreshRunbookList" Grid.Column="2" Grid.Row="1" Margin="5,10,5,0" Content="Refresh" Click="ButtonRefreshRunbookList_Click" />
+                    <Button x:Name="ButtonUploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload Draft" Click="ButtonUploadRunbook_Click" />
+                    <Button x:Name="ButtonTestRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Test Draft" Click="ButtonTestRunbook_Click"/>
                     <Button x:Name="ButtonPublishRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Publish Draft" Click="ButtonPublishRunbook_Click" IsEnabled="False"/>
                 </Grid>
             </TabItem>
