--- a/AutomationISE/TestJobOutputWindow.xaml
+++ b/AutomationISE/TestJobOutputWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="AutomationISE.TestJobOutputWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Test Job" Height="300" Width="Auto">
-    <Grid Margin="15,15,15,15">
+        Title="Test Job" Height="Auto" Width="Auto">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
@@ -13,8 +13,8 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Label Grid.Row="0">Test Job:</Label>
-        <TextBlock Name="OutputTextBlock" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Margin="0,0,0,0" Padding="5" Width="Auto" Background="#FF012456" Foreground="White" FontFamily="Lucida Console"/>
-        <Button Name="RefreshButton_Click" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Click="RefreshJobButton_Click">Refresh</Button>
+        <Label Grid.Row="0" Margin="10,0,0,0">Test Job:</Label>
+        <TextBlock Name="OutputTextBlock" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Margin="10,0,0,10" Padding="5" Width="Auto" Background="#FF012456" Foreground="White" FontFamily="Lucida Console"/>
+        <Button Name="RefreshJobButton" Grid.Column="1" Grid.Row="2" Margin="10,10,10,10" MinWidth="100" Click="RefreshJobButton_Click">Refresh</Button>
     </Grid>
 </Window>
