--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -18,6 +18,7 @@
                         <RowDefinition Name="SignIn" Height="50"/>
                         <RowDefinition Name="Subscription" Height="50"/>
                         <RowDefinition Name="Account" Height="50"/>
+                        <RowDefinition Name="Certificate" Height="50"/>
                         <RowDefinition Name="Status" Height="*"/>
                     </Grid.RowDefinitions>
                     <TextBox x:Name="workspaceTextBox" Margin="5" TextWrapping="Wrap" VerticalAlignment="Bottom" TextChanged="workspaceTextBox_TextChanged" Grid.Column="0" Grid.Row="0"/>
@@ -26,12 +27,16 @@
                     <Button x:Name="loginButton" Content="Sign In" Margin="5" VerticalAlignment="Bottom" Click="loginButton_Click" Grid.Column="1" Grid.Row="1"/>
                     <ComboBox x:Name="subscriptionComboBox" Margin="5" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Bottom" SelectionChanged="SubscriptionComboBox_SelectionChanged" />
                     <ComboBox x:Name="accountsComboBox" Margin="5" VerticalAlignment="Bottom" SelectionChanged="accountsComboBox_SelectionChanged" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"/>
-                    <TextBox x:Name="configurationStatusTextBox" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,25,5,5" TextWrapping="Wrap" BorderThickness="2" TextChanged="configurationStatusTextBox_TextChanged"/>
+                    <TextBox x:Name="configurationStatusTextBox" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,25,5,5" TextWrapping="Wrap" BorderThickness="2" TextChanged="configurationStatusTextBox_TextChanged"/>
                     <Label x:Name="workspaceLabel" Content="Location to store runbooks and assets" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.Row="0" />
                     <Label x:Name="signinLabel" Content="Sign in to Azure Automation" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1" Grid.Column="0"/>
                     <Label x:Name="subscriptionLabel" Content="Select Subscription" Grid.Row="2" Grid.Column="0"  HorizontalAlignment="Left" VerticalAlignment="Top"/>
                     <Label x:Name="automationAccountLabel" Content="Select Automation Account" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="3" Grid.Column="0"/>
-                    <Label x:Name="configurationStatusLabel" Content="Status" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/>
+                    <Label x:Name="configurationStatusLabel" Content="Status" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"/>
+                    <Label x:Name="certificateStatusLabel" Content="Certificate thumbprint to encyrpt local assets" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/>
+                    <TextBox x:Name="certificateTextBox" TextWrapping="Wrap" Margin="5" VerticalAlignment="Bottom" TextChanged="certificateTextBox_TextChanged" Grid.Column="0" Grid.Row="4"/>
+                    <Button x:Name="certificateButton" Content="Change" Margin="5" VerticalAlignment="Bottom" Click="certificateButton_Click" Grid.Column="1" Grid.Row="4"/>
+
                 </Grid>
             </TabItem>
             <TabItem x:Name="runbookTab" Header="Runbooks">
