--- a/AutomationISE/NewOrEditVariableDialog.xaml
+++ b/AutomationISE/NewOrEditVariableDialog.xaml
@@ -20,7 +20,7 @@
         <ComboBox x:Name="variableEncryptedComboBox" Margin="0,0,0,10" Grid.Row="1" Grid.Column="1" SelectionChanged="VariableEncryptedComboBox_SelectionChanged" />
         <Label Grid.Row="2">Value:</Label>
         <TextBox Name="valueTextbox" Grid.Row="2" Grid.Column="1" Margin="0,0,0,10" />
-        <PasswordBox Name="encryptedValueTextbox" Grid.Row="2" Grid.Column="1" Margin="0,0,0,10" Opacity="0" />
+        <PasswordBox Name="encryptedValueTextbox" Grid.Row="2" Grid.Column="1" Margin="0,0,0,10" Visibility="Collapsed" />
         <WrapPanel Grid.Row="3" Name="ButtonsPanel" Grid.ColumnSpan="2" HorizontalAlignment="Center" Margin="0,15,0,0">
             <Button Click="OkButton_Click" IsDefault="True" Name="OkButton" MinWidth="60" Margin="0,0,10,0">OK</Button>
             <Button IsCancel="True" MinWidth="60">Cancel</Button>
