--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -21,9 +21,9 @@
                         <RowDefinition Name="Certificate" Height="50"/>
                         <RowDefinition Name="Status" Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBox x:Name="workspaceTextBox" Margin="5" TextWrapping="Wrap" VerticalAlignment="Bottom" TextChanged="workspaceTextBox_TextChanged" Grid.Column="0" Grid.Row="0"/>
+                    <TextBox x:Name="workspaceTextBox" Margin="5" VerticalAlignment="Bottom" TextChanged="workspaceTextBox_TextChanged" Grid.Column="0" Grid.Row="0"/>
                     <Button x:Name="workspaceButton" Content=" Browse " Margin="5" VerticalAlignment="Bottom" Click="workspaceButton_Click" Grid.Column="1" Grid.Row="0"/>
-                    <TextBox x:Name="userNameTextBox" TextWrapping="Wrap" Margin="5" VerticalAlignment="Bottom" TextChanged="userNameTextBox_TextChanged" Grid.Column="0" Grid.Row="1"/>
+                    <TextBox x:Name="userNameTextBox" Margin="5" VerticalAlignment="Bottom" TextChanged="userNameTextBox_TextChanged" Grid.Column="0" Grid.Row="1"/>
                     <Button x:Name="loginButton" Content="Sign In" Margin="5" VerticalAlignment="Bottom" Click="loginButton_Click" Grid.Column="1" Grid.Row="1"/>
                     <ComboBox x:Name="subscriptionComboBox" Margin="5" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Bottom" SelectionChanged="SubscriptionComboBox_SelectionChanged" />
                     <ComboBox x:Name="accountsComboBox" Margin="5" VerticalAlignment="Bottom" SelectionChanged="accountsComboBox_SelectionChanged" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"/>
@@ -34,7 +34,7 @@
                     <Label x:Name="automationAccountLabel" Content="Select Automation Account" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="3" Grid.Column="0"/>
                     <Label x:Name="configurationStatusLabel" Content="Status" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"/>
                     <Label x:Name="certificateStatusLabel" Content="Certificate thumbprint to encrypt local assets" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/>
-                    <TextBox x:Name="certificateTextBox" TextWrapping="Wrap" Margin="5" VerticalAlignment="Bottom" TextChanged="certificateTextBox_TextChanged" Grid.Column="0" Grid.Row="4"/>
+                    <TextBox x:Name="certificateTextBox" Margin="5" VerticalAlignment="Bottom" TextChanged="certificateTextBox_TextChanged" Grid.Column="0" Grid.Row="4"/>
                     <Button x:Name="certificateButton" Content="Change" Margin="5" VerticalAlignment="Bottom" Click="certificateButton_Click" Grid.Column="1" Grid.Row="4"/>
 
                 </Grid>
