--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -27,7 +27,7 @@
                     <Button x:Name="loginButton" Content="Sign In" Margin="5" VerticalAlignment="Bottom" Click="loginButton_Click" Grid.Column="1" Grid.Row="1"/>
                     <ComboBox x:Name="subscriptionComboBox" Margin="5" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Bottom" SelectionChanged="SubscriptionComboBox_SelectionChanged" />
                     <ComboBox x:Name="accountsComboBox" Margin="5" VerticalAlignment="Bottom" SelectionChanged="accountsComboBox_SelectionChanged" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"/>
-                    <TextBox x:Name="configurationStatusTextBox" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,25,5,5" TextWrapping="Wrap" BorderThickness="2" TextChanged="configurationStatusTextBox_TextChanged" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto"/>
+                    <TextBox x:Name="configurationStatusTextBox" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,25,5,5" IsReadOnly="True" TextWrapping="Wrap" BorderThickness="2" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto"/>
                     <Label x:Name="workspaceLabel" Content="Location to store runbooks and assets" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.Row="0" />
                     <Label x:Name="signinLabel" Content="Sign in to Azure Automation" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1" Grid.Column="0"/>
                     <Label x:Name="subscriptionLabel" Content="Select Subscription" Grid.Row="2" Grid.Column="0"  HorizontalAlignment="Left" VerticalAlignment="Top"/>
