--- a/AutomationISE/TestJobOutputWindow.xaml
+++ b/AutomationISE/TestJobOutputWindow.xaml
@@ -14,7 +14,11 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Margin="10,0,0,0">Test Job:</Label>
-        <TextBlock Name="OutputTextBlock" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Margin="10,0,0,10" Padding="5" Width="Auto" Background="#FF012456" Foreground="White" FontFamily="Lucida Console"/>
+        <RichTextBox Name="OutputTextBlock" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Margin="10,0,0,10" Padding="5" Width="Auto" IsReadOnly="True" VerticalScrollBarVisibility="Auto" Background="#FF012456" Foreground="White" FontFamily="Lucida Console">
+            <FlowDocument>
+                <Paragraph Name="OutputTextBlockParagraph"/>
+            </FlowDocument>
+        </RichTextBox>
         <Button Name="RefreshJobButton" Grid.Column="1" Grid.Row="2" Margin="10,10,10,10" MinWidth="100" Click="RefreshJobButton_Click">Refresh</Button>
     </Grid>
 </Window>
