--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -50,6 +50,7 @@
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="35"/>
                         <RowDefinition Height="35"/>
+                        <RowDefinition Height="35"/>
                         <RowDefinition Height="5"/>
                     </Grid.RowDefinitions>
                     <ListView x:Name="RunbooksListView" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" SelectionChanged="RunbooksListView_SelectionChanged">
@@ -72,6 +73,8 @@
                     <Button x:Name="ButtonUploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload Draft" Click="ButtonUploadRunbook_Click" />
                     <Button x:Name="ButtonTestRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Test Draft" Click="ButtonTestRunbook_Click"/>
                     <Button x:Name="ButtonPublishRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Publish Draft" Click="ButtonPublishRunbook_Click" IsEnabled="False"/>
+                    <Button x:Name="ButtonSourceControlRunbook" Grid.Column="0" Grid.Row="3" Margin="5,10,5,0" Content="Start Source Control Sync" Click="ButtonSourceControlRunbook_Click" IsEnabled="False"/>
+                    <Button x:Name="ButtonCheckinSourceControlRunbook" Grid.Column="1" Grid.Row="3" Margin="5,10,5,0" Content="Checkin(coming soon)" Click="ButtonCheckinSourceControlRunbook_Click" IsEnabled="False"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="settingsTab" Header="Assets">
