--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -26,7 +26,7 @@
                     <Label x:Name="workspaceLabel" Content="Base path for runbooks and assets" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.Row="0" />
                     <TextBox x:Name="workspaceTextBox" Margin="5" VerticalAlignment="Bottom" TextChanged="workspaceTextBox_TextChanged" Grid.Column="0" Grid.Row="0"/>
                     <Button x:Name="workspaceButton" Content=" Browse " Margin="5" VerticalAlignment="Bottom" Click="workspaceButton_Click" Grid.Column="1" Grid.Row="0"/>
-                    <TextBox x:Name="userNameTextBox" Margin="5" VerticalAlignment="Bottom" TextChanged="userNameTextBox_TextChanged" Grid.Column="0" Grid.Row="1"/>
+                    <TextBox x:Name="userNameTextBox" Margin="5" VerticalAlignment="Bottom" Grid.Column="0" Grid.Row="1"/>
                     <Button x:Name="loginButton" Content="Sign In" Margin="5" VerticalAlignment="Bottom" Click="loginButton_Click" Grid.Column="1" Grid.Row="1"/>
                     <ComboBox x:Name="subscriptionComboBox" Margin="5" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Bottom" SelectionChanged="SubscriptionComboBox_SelectionChanged" />
                     <ComboBox x:Name="accountsComboBox" Margin="5" VerticalAlignment="Bottom" SelectionChanged="accountsComboBox_SelectionChanged" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"/>
