--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -6,7 +6,15 @@
              xmlns:local="clr-namespace:AutomationISE"
              mc:Ignorable="d">
     <Grid>
-        <TabControl x:Name="mainTabControl" SelectionChanged="TabControl_SelectionChanged">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <TabControl x:Name="mainTabControl" SelectionChanged="TabControl_SelectionChanged" Grid.ColumnSpan="3">
             <TabItem x:Name="configurationTab" Header="Configuration">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -99,20 +107,6 @@
                     <Button x:Name="ButtonTestRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Test Draft in Azure" Click="ButtonTestRunbook_Click"/>
                     <Button x:Name="ButtonPublishRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Publish Draft" Click="ButtonPublishRunbook_Click" IsEnabled="False"/>
                     <Button x:Name="ButtonSourceControlRunbook" Grid.Column="0" Grid.Row="3" Margin="5,10,5,5" Content="Sync Source Control" Click="ButtonSourceControlRunbook_Click" IsEnabled="False" Visibility="Collapsed" Height="25"/>
-                    <Label Name="ProgressSectionHeader" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Top">Background tasks will appear here:</Label>
-                    <Label Name="ProgressLabel" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Nothing yet!</Label>
-                    <Label Name="JobsRemainingLabel" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center"/>
-                    <Image Source="Images/automation-big-gear-no-background.png" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Right" RenderTransformOrigin=".5,.5" Height="40" Margin="5,5,5,5">
-                        <Image.RenderTransform>
-                            <RotateTransform  x:Name="BigGear" Angle="0" />
-                        </Image.RenderTransform>
-                    </Image>
-                    <Image Source="Images/automation-small-gear-no-background.png" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Right" RenderTransformOrigin=".5,.5" Height="15" Margin="0,38,42,5">
-                        <Image.RenderTransform>
-                            <RotateTransform  x:Name="SmallGear" Angle="0" />
-                        </Image.RenderTransform>
-                    </Image>
-                    <Image Source="Images/lightning-no-background.png" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Right" RenderTransformOrigin=".5,.5" Height="50"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="settingsTab" Header="Assets">
@@ -184,6 +178,19 @@
                 </Grid>
             </TabItem>
         </TabControl>
+        <Label Name="WorkStartingLabel" FontSize="13" Grid.Row="4" Grid.Column="0" VerticalAlignment="Top" Margin="5,0,0,0">Hello there, thanks for trying out our beta.</Label>
+        <Label Name="WorkFinishingLabel" FontSize="13" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" Margin="5,0,0,0">Happy automating!</Label>
+        <Image Source="Images/automation-big-gear-no-background.png" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right" RenderTransformOrigin=".5,.5" Height="40" Margin="5,5,5,5">
+            <Image.RenderTransform>
+                <RotateTransform  x:Name="BigGear" Angle="0" />
+            </Image.RenderTransform>
+        </Image>
+        <Image Source="Images/automation-small-gear-no-background.png" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right" RenderTransformOrigin=".5,.5" Height="15" Margin="0,38,42,5">
+            <Image.RenderTransform>
+                <RotateTransform  x:Name="SmallGear" Angle="0" />
+            </Image.RenderTransform>
+        </Image>
+        <Image Source="Images/lightning-no-background.png" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Right" RenderTransformOrigin=".5,.5" Height="50"/>
     </Grid>
     <UserControl.Resources>
         <Storyboard x:Key="bigGearRotationStoryboard">
