--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -165,7 +165,7 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Button x:Name="ButttonNewAsset" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="New" Click="ButttonNewAsset_Click" />
+                    <Button x:Name="ButttonNewAsset" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="New" Click="ButtonNewAsset_Click" />
                     <Button x:Name="ButtonEditAsset" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Edit Locally" Height="25" VerticalAlignment="Top" Click="ButtonEditAsset_Click" />
                     <Button x:Name="ButtonRefreshAssetList" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Refresh" Click="ButtonRefreshAssetList_Click" />
                     <Button x:Name="ButtonDownloadAsset" Grid.Column="0" Grid.Row="3" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadAsset_Click" />
