--- a/AutomationISE/ChangeCertificateDialog.xaml
+++ b/AutomationISE/ChangeCertificateDialog.xaml
@@ -5,11 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutomationISE"
         mc:Ignorable="d"
-        Title="Change Certificate" Height="178.788" Width="346.388" WindowStartupLocation="CenterScreen">
-    <Grid x:Name="ChangeCertificate" Margin="10,10,10,10" >
+        Title="Change Certificate" Height="161.632" Width="450" WindowStartupLocation="CenterScreen">
+    <Grid x:Name="ChangeCertificate" Margin="10,10,13,10" >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" MinWidth="150" />
+            <ColumnDefinition Width="Auto" MinWidth="326" />
             <ColumnDefinition />
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -17,8 +19,9 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Label x:Name="ThumbprintLabel" Content="Enter New Thumbprint" Margin="10,10,10,0" Grid.Column="0"  Grid.Row="0"/>
-        <TextBox x:Name="ThumbprinttextBox" Margin="10,0,0,0"  HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.Row="1"/>
-        <Button x:Name="OKbutton" Content="OK" Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="OKbutton_Click" Grid.Row="2" />
-        <Button x:Name="canelButton" Content="Cancel" Margin="0,10,0,0" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Grid.Column="1" Grid.Row="2"/>
+        <TextBox x:Name="ThumbprinttextBox" Margin="10,0,0,0"  HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top"  Grid.Row="1" Width="311" Height="18"/>
+        <Button x:Name="browseCertificateButton" Content="Browse" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="browseCertificateButton_Click" Height="20"/>
+        <Button x:Name="OKbutton" Content="OK" Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="OKbutton_Click" Grid.Row="2" Height="20" />
+        <Button x:Name="canelButton" Content="Cancel" Margin="90,10,0,0" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Grid.Row="2" Height="20"/>
     </Grid>
 </Window>
